--- a/.env
+++ b/.env
@@ -2,11 +2,11 @@ API_VERSION=1.0.0
 JWT_KEY=3052f3a6-c179-4e6d-93a3-c11eecac645c
 JWT_EXPIRATION=14d
 
-DB_HOST=localhost
+DB_HOST=sqlserver
 DB_PORT=1433
 DB_USERNAME=sa
-DB_PASSWORD='simposio#2023'
-DB_DATABASE=SIMTEFAC_27
+DB_PASSWORD= "YourStrong!Passw0rd"
+DB_DATABASE=SIMTEFAC
 
 EMAIL_SMTP_HOST='smtp-mail.outlook.com'
 EMAIL_SMTP_PORT=465
